gmymf-storefront/gmymf-storefront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmymf-storefront
  namespace: gmymf-storefront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gmymf-storefront
  template:
    metadata:
      labels:
        app: gmymf-storefront
    spec:
      containers:
      - name: gmymf-storefront
        image: ghcr.io/davidcode2/gmymf-storefront:0.0.12
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "50m"
