gmymf-storefront/gmymf-storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmymf-storefront
  namespace: gmymf-storefront
spec:
  selector:
    app: gmymf-storefront
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
